deploy/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: helloworld-rubyapp-ingress
  namespace: kus-spike
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - helloworld-rubyapp.apps.cp-2601-1538.cloud-platform.service.justice.gov.uk
  rules:
  - host: helloworld-rubyapp.apps.cp-2601-1538.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: rubyapp-service
          servicePort: 4567
